styles/base.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
}

.govuk-header {
  background-color: #f1f1f1;

  .govuk-header__link, .govuk-header__link:visited {
    color: #15141A;
  }

  .govuk-header__logo img {
    vertical-align: bottom;
  }
}

